tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 6: function 'if_only' can exit without returning a value
error: 7: function 'return_on_if_but_not_else' can exit without returning a value
error: 8: function 'return_on_else_but_not_if' can exit without returning a value
error: 10: function 'for_with_conditional_return' can exit without returning a value
error: 11: function 'for_with_conditional_break' can exit without returning a value
error: 12: function 'for_with_conditional_continue' can exit without returning a value
error: 14: function 'switch_empty' can exit without returning a value
error: 17: function 'switch_with_no_default' can exit without returning a value
error: 23: function 'switch_with_break' can exit without returning a value
error: 30: function 'switch_with_continue' can exit without returning a value
error: 37: function 'switch_with_fallthrough_off_bottom' can exit without returning a value
error: 44: function 'switch_with_conditional_break' can exit without returning a value
error: 51: function 'switch_with_conditional_continue' can exit without returning a value
13 errors
